--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<div class="box">
+			<h1>jQuery Weekly</h1>
+			<div id="links">
+				<ul>
+					<li><a href='https://learn.jquery.com/'>Learn jQuery</a></li>
+					<li><a href='http://treehouse-project-downloads.s3.amazonaws.com/jquery-basics/jquery_cheatsheet.pdf'>jQuery Cheatsheet</a></li>
+					<li><a href='https://api.jquery.com/'>jQuery Documentation</a></li>
+					<li><a href='https://developer.mozilla.org/en-US/docs/Glossary/jQuery'>jQuery Glossary</a></li>
+				</ul>
+				<label><input type='checkbox'> Allow PDF downloads</label>
+			</div>
+		</div>
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
